# mecojoni

./: .gitignore  BENCHMARKS.md  BYTECODE_FORMAT.md  BYTECODE_FORMAT_PLAN.md  COMPATIBILITY.md  CONFORMANCE.md  Cargo.toml  INTERFACES.md  MIGRATION_V1_TO_V2.md  README.md  RELEASE.md  REVIEW.md  ROADMAP.md  SPECIFICATION.md  SYNTAX.md  V2_INTERFACES.md  V2_SPECIFICATION.md  V2_SYNTAX.md  deno.json  package.json  test.meco.md
.github/workflows/: ci.yml
benchmarks/artifacts/: README.md  harbor.mecob
benchmarks/artifacts/workloads/: chain-512.mecob  dense-dag-96x8.mecob  fanout-10000.mecob  flat-64.mecob  recursive-balanced.mecob  tree-dialogue.mecob
benchmarks/results/: 2026-07-16-bytecode0-darwin-arm64.json  2026-07-16-darwin-arm64.json
crates/mecojoni-benchmarks/: Cargo.toml
crates/mecojoni-benchmarks/baselines/: operations-v1.contract  operations.contract
crates/mecojoni-benchmarks/src/: lib.rs  main.rs  startup.rs
crates/mecojoni-benchmarks/tests/: artifact_files.rs  operation_contract.rs  recorded_results.rs  startup_package.rs
crates/mecojoni-cli/: Cargo.toml  README.md
crates/mecojoni-cli/src/: format.rs  lib.rs  loader.rs  main.rs  v1.rs
crates/mecojoni-cli/tests/: cli_process.rs
crates/mecojoni-cli/tests/fixtures/messages/: root.meco
crates/mecojoni-cli/tests/fixtures/v2/: root.meco
crates/mecojoni-core/: Cargo.toml  README.md
crates/mecojoni-core/src/: artifact.rs  ast.rs  audit.rs  compiler.rs  diagnostic.rs  diverse.rs  error.rs  formatter.rs  front_matter.rs  lib.rs  package.rs  parser.rs  prng.rs  profile.rs  provenance.rs  rational.rs  source.rs  span.rs  value.rs
crates/mecojoni-core/tests/: artifact_loading.rs  artifact_semantics.rs  fixture_loading.rs  fluent_integration.rs  lowered_ir_contract.rs  print_hello_generation.rs
crates/mecojoni-core/tests/fixtures/: README.md
crates/mecojoni-core/tests/fixtures/expected/: README.md  independent-errors.diags  lowered-ir-v1.contract  lowered-ir.contract  readme-corpus.ast
crates/mecojoni-core/tests/fixtures/invalid/: README.md  bad-indentation.meco  body-guard-order.meco  body-unicode-rule.meco  body-unknown-escape.meco  body-unterminated-comment.meco  body-zero-weight.meco  independent-errors.meco  missing-module.meco  unknown-field.meco  unsupported-version.meco
crates/mecojoni-core/tests/fixtures/valid/: composition-audit.meco  cooked-block.meco  cooked-block.meco.md  minimal.meco  unicode-terminal.meco
crates/mecojoni-wasm/: Cargo.toml  README.md  build.rs
crates/mecojoni-wasm/src/: lib.rs  wire.rs
docs/decisions/: 0001-defer-compiled-artifacts.md
editors/vscode/: package.json
engines/defold/: README.md  build.sh
engines/defold/demo/: game.project
engines/defold/demo/input/: game.input_binding
engines/defold/demo/main/: main.collection  main.go  main.script
engines/defold/demo/mecojoni/: ext.manifest
engines/defold/demo/mecojoni/include/: mecojoni.h
engines/defold/demo/mecojoni/src/: mecojoni_ext.cpp
engines/godot/: README.md
engines/godot/demo/: main.gd  main.gd.uid  main.tscn  project.godot
engines/godot/gdextension/: CMakeLists.txt
engines/godot/gdextension/src/: ffi_strings.h  meco_grammar.cpp  meco_grammar.h  register_types.cpp
engines/godot/mecojoni-ffi/: Cargo.toml
engines/godot/mecojoni-ffi/src/: tests.rs
engines/godot/mecojoni-ffi/tests/: c_smoke.c
engines/unity/: README.md  build.sh
engines/unity/demo/Assets/: MecojoniDemo.cs  MecojoniDemoRunner.cs
engines/unity/demo/ProjectSettings/: ProjectSettings.asset
examples/: hello.meco  space-station-massive.meco  space-station.meco
examples/npc/: common.meco  root.meco
godot/: README.md
godot/demo/data/npc/: common.meco
godot/gdextension/: CMakeLists.txt
godot/gdextension/src/: meco_package_builder.cpp  meco_package_builder.h  register_types.h
godot/mecojoni-ffi/src/: lib.rs
godot/mecojoni-ffi/tests/: c_smoke.c
js/: README.md  browser_server.ts  browser_smoke.html  browser_smoke.ts  browser_test.ts  embedded_browser_smoke.ts  embedded_test.ts  mecojoni.ts  mecojoni_test.ts  v1_workloads_bench.ts  workloads.ts  workloads_bench.ts  workloads_test.ts
js/fixtures/: README.md  hello.mecob
mcp/: README.md  server.ts  server_test.ts
src/: cli.js  meco.js
test/: meco.test.js
v1/: README.md
v1/src/: audit.js
v1/test/: meco.test.js
(+3 files in other folders)
