# SPDX-License-Identifier: MPL-2.0
[package]
name = "mecojoni-ffi"
description = "C ABI for embedding the Mecojoni compiler and runtime in native hosts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
mecojoni-core = { path = "../../../crates/mecojoni-core" }

# This crate intentionally opts out of the workspace `unsafe_code = "deny"`
# lint: a C ABI must dereference caller-supplied raw pointers. All unsafety is
# confined to the exported boundary functions and documented per call.
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
